--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": false,
   "cSpell.enabled": false,
-  "python.linting.pylintEnabled": true
+  "python.linting.pylintEnabled": true,
+  "python.linting.mypyEnabled": false
 }
