--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.linting.enabled": true,
+  "python.linting.enabled": false,
   "python.linting.flake8Enabled": false,
   "cSpell.enabled": false,
   "python.linting.pylintEnabled": true,
